--- a/order/package.json
+++ b/order/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "account",
+  "name": "order",
   "version": "1.0.0",
   "description": "semana 2 - nxt",
   "main": "tempCodeRunnerFile.js",
