--- a/product/package.json
+++ b/product/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "swagger-ui-express": "^4.6.0"
   }
 }
