--- a/product/package.json
+++ b/product/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.2.6",
     "swagger-ui-express": "^4.6.0"
