--- a/account/package.json
+++ b/account/package.json
@@ -2,7 +2,7 @@
   "name": "account",
   "version": "1.0.0",
   "description": "semana 2 - nxt",
-  "main": "tempCodeRunnerFile.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
