--- a/product/package.json
+++ b/product/package.json
@@ -2,7 +2,7 @@
   "name": "product",
   "version": "1.0.0",
   "description": "semana 2 - nxt",
-  "main": "tempCodeRunnerFile.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
