FIx: add schemas on components

--- a/order/swagger/order.yaml
+++ b/order/swagger/order.yaml
@@ -11,6 +11,7 @@ info:
     name: Licença
     url: http://www.alura.com
 components:
+  schemas:
     order-insert:
       type: object
       properties:
