--- a/order/package.json
+++ b/order/package.json
@@ -1,7 +1,7 @@
 {
   "name": "order",
   "version": "1.0.0",
-  "description": "semana 2 - nxt",
+  "description": "projects ecomm - Alura/PagoNxt",
   "main": "/src/app.js",
   "type": "module",
   "scripts": {
