--- a/order/package.json
+++ b/order/package.json
@@ -2,12 +2,12 @@
   "name": "order",
   "version": "1.0.0",
   "description": "projects ecomm - Alura/PagoNxt",
-  "main": "/src/app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.2.6",
     "swagger-ui-express": "^4.6.0"
   }
 }
