Refactor: Docker compose unified

--- a/finance-mongo/Dockerfile
+++ b/finance-mongo/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:16-alpine
 
-WORKDIR /node-app/order
+WORKDIR /node-app/finance-mongo
 
 COPY . ./
 
-EXPOSE 3004
+EXPOSE 3005
 
 RUN npm install
 
