--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,24 @@ services:
   product:
     build: ./product
     container_name: ecomm-product
+    volumes:
+      - product-vol:/node-app/product
     ports:
      - 3001:3001
   
   account:
     build: ./account
     container_name: ecomm-account
+    volumes:
+      - account-vol:/node-app/account
     ports:
      - 3002:3002
 
   finance:
     build: ./finance
     container_name: ecomm-finance
+    volumes:
+      - finance-vol:/node-app/finance
     depends_on:
       - mysql
     ports:
@@ -34,14 +40,24 @@ services:
   finance-mongo:
     build: ./finance-mongo
     container_name: ecomm-finance-mongo
+    volumes:
+      - finance-mongo-vol:/node-app/finance-mongo
     ports:
       - 3005:3005
 
   order:
     build: ./order
     container_name: ecomm-order
+    volumes:
+      - order-vol:/node-app/order
     ports:
      - 3004:3004
 
 volumes:
   db-mysql-ecomm:
+  product-vol:
+  account-vol:
+  order-vol:
+  finance-vol:
+  finance-mongo-vol:
+  
