--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,17 @@
         "semi": [
             "error",
             "always"
+        ],
+        "max-len": [
+            "error",
+            {
+              "code": 100,
+              "ignoreComments": true
+            }
+        ],
+        "complexity": [
+        "error",
+        5
         ]
     }
 }
