--- a/product/package.json
+++ b/product/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/NickMendes/ecomm#readme",
   "devDependencies": {
     "@jest/globals": "^29.4.3",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   },
