--- a/order/package.json
+++ b/order/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.4.3",
     "mongoose": "^6.2.6",
     "swagger-ui-express": "^4.6.0"
   }
