--- a/account/package.json
+++ b/account/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/NickMendes/ecomm#readme",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@jest/globals": "^29.4.3",
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest": "^29.4.3",
     "mongoose": "^6.9.0",
     "swagger-ui-express": "^4.6.0"
   }
