--- a/account/package.json
+++ b/account/package.json
@@ -23,9 +23,16 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.9.0",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "swagger-ui-express": "^4.6.0"
   }
 }
