--- a/order/package.json
+++ b/order/package.json
@@ -24,9 +24,13 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.2.6",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.2",
     "swagger-ui-express": "^4.6.0"
   }
 }
