--- a/product/package.json
+++ b/product/package.json
@@ -26,6 +26,7 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
