--- a/product/swagger/products.yaml
+++ b/product/swagger/products.yaml
@@ -1,7 +1,8 @@
 openapi: 3.0.3
+
 info:
-  description: Semana 5 - Treinamento da PagoNxt com a Alura sobre HTTP e Swagger.
-  version: 0.1.0
+  description: Treinamento da PagoNxt (Empresa Santander) com a Alura - Microserviço de Ecommerce, documentação dos produtos
+  version: 0.2.0
   title: Ecomm Project - Products API
   termsOfService: http://swagger.io/terms/
   contact:
@@ -10,8 +11,14 @@ info:
   license:
     name: Licença
     url: http://www.alura.com
+
 components:
   schemas:
+    securitySchemes:
+      JWTAuth:
+        type: http
+        scheme: bearer
+        bearerFormat: JWT
     category-response:
       type: object
       properties:
@@ -44,8 +51,7 @@ components:
         slug:
           type: string
         unit_price:
-          type: number
-          format: double
+          type: integer
         storage_qty:
           type: integer
         category_id:
@@ -60,15 +66,16 @@ components:
         slug:
           type: string
         unit_price:
-          type: number
-          format: double
+          type: integer
         storage_qty:
           type: integer
         category_id:
           type: integer
+
 servers:
-  - url: http://localhost:3000/
+  - url: http://localhost:3001/
     description: Product Server - XD
+
 paths:
   /categories:
     get:
@@ -84,6 +91,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/category-response'
+        '401':
+          description: Unathorized
+          content:
+            application/json:
+              example: Token not found || Expired or invalid token
         '404':
           description: Not Found
           content:
@@ -91,6 +103,29 @@ paths:
               example: Not Found
         '500':
           description: Internal Server Error
+
+    post:
+      tags:
+        - Categories
+      security:
+        - JWTAuth: []
+      summary:
+        Add a new category to the list. You need to be logged as an adminstrator to use this.
+      responses:
+        '201':
+          description: Created
+          content:
+            aplication/json:
+              schema:
+                $ref: '#/components/schemas/category-insert'
+        '401':
+          description: Unathorized
+          content:
+            aplication/json:
+              example: Token not found || Expired or invalid token
+        '500':
+          description: Internal Server Error
+  
   /categories/{id}:
     parameters:
       - name: id
@@ -111,6 +146,11 @@ paths:
             aplication/json:
               schema:
                 $ref: '#/components/schemas/category-response'
+        '401':
+          description: Unathorized
+          content:
+            application/json:
+              example: Token not found || Expired or invalid token
         '404':
           description: Not Found
           content:
@@ -118,54 +158,22 @@ paths:
               example: Category Not Found
         '500':
           description: Internal Server Error
-  /admin/categories:
-    post:
-      tags:
-        - Categories
-      summary: >-
-        Add a new category to the list. You need to be logged as an adminstrator
-        to use this.
-      responses:
-        '201':
-          description: Created
-          content:
-            aplication/json:
-              schema:
-                $ref: '#/components/schemas/category-insert'
-        '401':
-          description: Unauthorized
-          content:
-            aplication/json:
-              example: User unathorized, please check your credentials
-        '500':
-          description: Internal Server Error
-  /admin/categories/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: Unique identifier
-        required: true
-        example: 63caa785ae701b25441ff0be
-        schema:
-          type: string
+
     put:
       tags:
         - Categories
-      summary: >-
-        Change category by ID. You need to be logged as an adminstrator to use
-        this.
+      security:
+        - JWTAuth: []
+      summary:
+        Change category by ID. You need to be logged as an adminstrator to use this.
       responses:
-        '202':
-          description: Accepted
-          content:
-            aplication/json:
-              schema:
-                $ref: '#/components/schemas/category-insert'
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
             aplication/json:
-              example: User unathorized, please check your credentials
+              example: Token not found || Expired or invalid token
         '404':
           description: Not Found
           content:
@@ -173,25 +181,17 @@ paths:
               example: Category Not Found
         '500':
           description: Internal Server Error
+
     patch:
       tags:
         - Categories
-      summary: >-
-        Change category status by ID. You need to be logged as an adminstrator
-        to use this.
+      security:
+        - JWTAuth: []
+      summary:
+        Change category status by ID. You need to be logged as an adminstrator to use this.
       responses:
-        '202':
-          description: Accepted
-          content:
-            aplication/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    enum:
-                      - Ativa
-                      - Inativa
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
@@ -204,18 +204,17 @@ paths:
               example: Category Not Found
         '500':
           description: Internal Server Error
+
     delete:
       tags:
         - Categories
-      summary: >-
-        Delete category by ID. You need to be logged as an adminstrator to use
-        this.
+      security:
+        - JWTAuth: []
+      summary:
+        Delete category by ID. You need to be logged as an adminstrator to use this.
       responses:
-        '200':
-          description: Seccess
-          content:
-            aplication/json:
-              example: Category deleted
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
@@ -228,6 +227,7 @@ paths:
               example: Category Not Found
         '500':
           description: Internal Server Error
+
   /products:
     get:
       tags:
@@ -249,6 +249,36 @@ paths:
               example: Not Found
         '500':
           description: Internal Server Error
+
+    post:
+      tags:
+        - Products
+      security:
+        - JWTAuth: []
+      summary: Add a new product to the list. You need to be logged as an adminstrator to use this.
+      requestBody:
+        required: true
+        content:
+          aplication/json:
+            schema:
+              $ref: '#/components/schemas/product-insert'
+      responses:
+        '200':
+          description: Success
+          content:
+            aplication/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/product-response'
+        '404':
+          description: Not Found
+          content:
+            aplication/json:
+              example: Not Found
+        '500':
+          description: Internal Server Error
+
   /products/{id}:
     parameters:
       - name: id
@@ -276,50 +306,13 @@ paths:
               example: Product Not Found
         '500':
           description: Internal Server Error
-  /admin/products:
-    post:
-      tags:
-        - Products
-      summary: >-
-        Add a new product to the list. You need to be logged as an adminstrator
-        to use this.
-      requestBody:
-        required: true
-        content:
-          aplication/json:
-            schema:
-              $ref: '#/components/schemas/product-insert'
-      responses:
-        '200':
-          description: Success
-          content:
-            aplication/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/product-response'
-        '404':
-          description: Not Found
-          content:
-            aplication/json:
-              example: Not Found
-        '500':
-          description: Internal Server Error
-  /admin/products/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: Unique identifier
-        required: true
-        example: 63caa785ae701b25441ff0be
-        schema:
-          type: string
+
     put:
       tags:
         - Products
-      summary: >-
-        Change all product information by ID. You need to be logged as an
-        adminstrator to use this.
+      security:
+        - JWTAuth: []
+      summary: Change all product information by ID. You need to be logged as an adminstrator to use this.
       requestBody:
         required: true
         content:
@@ -327,12 +320,8 @@ paths:
             schema:
               $ref: '#/components/schemas/product-insert'
       responses:
-        '202':
-          description: Accepted
-          content:
-            aplication/json:
-              schema:
-                $ref: '#/components/schemas/product-response'
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
@@ -345,12 +334,13 @@ paths:
               example: Product Not Found
         '500':
           description: Internal Server Error
+    
     patch:
       tags:
         - Products
-      summary: >-
-        NOT IMPLEMENTED - Change a product information by ID. You need to be
-        logged as an adminstrator to use this.
+      security:
+        - JWTAuth: []
+      summary: NOT IMPLEMENTED - Change a product information by ID. You need to be logged as an adminstrator to use this.
       requestBody:
         required: true
         content:
@@ -358,12 +348,8 @@ paths:
             schema:
               type: object
       responses:
-        '202':
-          description: Accepted
-          content:
-            aplication/json:
-              schema:
-                $ref: '#/components/schemas/product-response'
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
@@ -376,18 +362,16 @@ paths:
               example: Product Not Found
         '500':
           description: Internal Server Error
+
     delete:
       tags:
         - Products
-      summary: >-
-        Delete product by ID. You need to be logged as an adminstrator to use
-        this.
+      security:
+        - JWTAuth: []
+      summary: Delete product by ID. You need to be logged as an adminstrator to use this.
       responses:
-        '200':
-          description: Success
-          content:
-            aplication/json:
-              example: Product deleted
+        '204':
+          description: No Content
         '401':
           description: Unauthorized
           content:
@@ -398,101 +382,5 @@ paths:
           content:
             aplication/json:
               example: Product Not Found
-        '500':
-          description: Internal Server Error
-  /products/range:
-    parameters:
-      - name: max_value
-        in: query
-        description: Maximum value price of Product
-        required: true
-        example: 100
-        schema:
-          type: integer
-      - name: min_value
-        in: query
-        description: Minimum value price of Product
-        required: true
-        example: 20
-        schema:
-          type: integer
-    get:
-      tags:
-        - Products
-      summary: NOT IMPLEMENTED - Search for products in an especific price range.
-      responses:
-        '200':
-          description: Success
-          content:
-            aplication/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/product-response'
-        '404':
-          description: Not Found
-          content:
-            aplication/json:
-              example: Not Found
-        '500':
-          description: Internal Server Error
-  /products/{category}:
-    parameters:
-      - name: category
-        in: path
-        description: Category of products you want to search
-        required: true
-        example: Esporte
-        schema:
-          type: string
-    get:
-      tags:
-        - Products
-      summary: NOT IMPLEMENTED - Search for products of an especific category
-      responses:
-        '200':
-          description: Success
-          content:
-            aplication/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/product-response'
-        '404':
-          description: Not Found
-          content:
-            aplication/json:
-              example: Category Not Found
-        '500':
-          description: Internal Server Error
-  /products/storage:
-    parameters:
-      - name: storage_qty
-        in: query
-        description: Minimum quantity of items on storage
-        required: true
-        example: 100
-        schema:
-          type: integer
-    get:
-      tags:
-        - Products
-      summary: >-
-        NOT IMPLEMENTED - Search for products with an especific quantity on
-        storage.
-      responses:
-        '200':
-          description: Success
-          content:
-            aplication/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/product-response'
-        '404':
-          description: Not Found
-          content:
-            aplication/json:
-              example: Not Found
         '500':
           description: Internal Server Error
